WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268436
Windows build broken after
273800@main
https://bugs.webkit.org/show_bug.cgi?id=268436
Summary
Windows build broken after 273800@main
Vitor Roriz
Reported
2024-01-30 20:07:06 PST
Windows build was broken by
https://commits.webkit.org/273800@main
Windows compiler can't implicitly convert 0ul to size_t apparently. I need to fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-30 20:07:22 PST
<
rdar://problem/121983146
>
Vitor Roriz
Comment 2
2024-01-30 20:15:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23560
EWS
Comment 3
2024-01-30 20:22:17 PST
Committed
273808@main
(b31165e92aed): <
https://commits.webkit.org/273808@main
> Reviewed commits have been landed. Closing PR #23560 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug