Fix Windows build after 273800@main https://bugs.webkit.org/show_bug.cgi?id=268436 rdar://problem/121983146

Reviewed by Ross Kirsling.

Windows build was broken by https://commits.webkit.org/273800@main
because apparently MSVC could not implicitly convert 0ul to size_t.

* Source/WebCore/layout/formattingContexts/block/BlockLayoutState.h:
(WebCore::Layout::BlockLayoutState::LineClamp::allowedLineCount const):

Canonical link: https://commits.webkit.org/273808@main